--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-#text {
+#main {
     font-family: sans-serif;
     text-align: center;
 }
@@ -15,5 +15,6 @@ button {
 }
 #cookie {
     width: 50px;
-    position: relative;
+    position: absolute;
+    visibility: visible;
 }
